# faiss-storage-lib

./: README.md  pyproject.toml
faiss_storage_lib/: __init__.py
faiss_storage_lib/core/: __init__.py  schema.py
faiss_storage_lib/engine/: __init__.py  document_store.py  faiss_engine.py  index_config.py  interfaces.py  registry.py  vector_store.py
src/engine/: faiss_engine.py
tests/: test_engine_crud.py  test_engine_threading.py  test_feature_get_by_id.py  test_ivf_index_types.py  test_public_api.py  test_registry.py
